<resources>
    <string name="app_name">Barcadu</string>
    <string name="action_settings">Settings</string>
    <string name="password_hint">Password</string>
    <string name="user_name_hint">Username</string>
    <string name="login_button_text">Login</string>
    <string name="inventory_info_button_text">Inventory Info</string>
    <string name="counts_button_text">Counts</string>
    <string name="transfers_button_text">Transfers</string>
    <string name="about_string">About</string>
</resources>
